--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.16",
         "@types/react-dom": "^17.0.0",
-        "bootstrap": "^5.1.0",
+        "bootstrap": "5.0.2",
         "eslint-config-prettier": "^8.3.0",
         "eslint-import-resolver-typescript": "^2.4.0",
-        "node-sass": "^6.0.1",
+        "node-sass": "4.14.1",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.0.0-beta.4",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
         "typescript": "^4.1.2",
