--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "no-plusplus":"off",
         "max-len":"off",
         "no-use-before-define": "off",
+        "react/no-array-index-key": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
         "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
         "react/prop-types": "off",
